...
  "audioCopiedFromLocalPlaylistToLocalPlaylist": "Audio \"{audioTitle}\" copié de la playlist locale \"{fromPlaylistTitle}\" vers la playlist locale \"{toPlaylistTitle}\".",
  "audioCopiedFromLocalPlaylistToYoutubePlaylist": "Audio \"{audioTitle}\" copié de la playlist locale \"{fromPlaylistTitle}\" vers la playlist Youtube \"{toPlaylistTitle}\".",
  "audioCopiedFromYoutubePlaylistToLocalPlaylist": "Audio \"{audioTitle}\" copié de la playlist Youtube \"{fromPlaylistTitle}\" vers la playlist locale \"{toPlaylistTitle}\".",
  "audioCopiedFromYoutubePlaylistToYoutubePlaylist": "Audio \"{audioTitle}\" copié de la playlist Youtube \"{fromPlaylistTitle}\" vers la playlist Youtube \"{toPlaylistTitle}\".",
  "copiedFromPlaylistLabel": "Copié de la playlist",
  "copiedToPlaylistLabel": "Copié vers la playlist",
  "audioPlayerViewNoCurrentAudio": "Aucun audio sélectionné",
  "deletePlaylist": "Supprimer la playlist ...",
  "deleteYoutubePlaylistDialogTitle": "Supprimer la playlist Youtube \"{title}\"",
  "deleteLocalPlaylistDialogTitle": "Supprimer la playlist locale \"{title}\"",
  "deletePlaylistDialogComment": "Suppression de la playlist ainsi que de tous ses fichiers audio, de son fichier JSON et de son répertoire.",
  "appBarTitleAudioExtractor": "Extraire Audio",
  "setAudioPlaySpeedDialogTitle": "Vitesse de lecture",
...
